codex-exp: iteration 7